# hal

./: .gitignore  CMakeLists.txt  LICENSE  README.md  clipboard.c  docs.sh  generate.py  hal.h  mappings.py  paul.h  paul.py  project.yml
cmake/: HalDependencies.cmake  HalModules.cmake  HalPlatform.cmake
docs/: index.html
docs/accelerometer_h/: index.html  toc.html
docs/barometer_h/: index.html  toc.html
docs/battery_h/: index.html  toc.html
docs/bluetooth_h/: index.html  toc.html
docs/brightness_h/: index.html  toc.html
docs/call_h/: index.html  toc.html
docs/camera_h/: index.html  toc.html
docs/clipboard_h/: index.html  toc.html
docs/compass_h/: index.html  toc.html
docs/cpu_count_h/: index.html  toc.html
docs/device_name_h/: index.html  toc.html
docs/email_h/: index.html  toc.html
docs/environment_h/: index.html  toc.html
docs/file_chooser_h/: index.html  toc.html
docs/filesystem_h/: index.html  toc.html
docs/flash_h/: index.html  toc.html
docs/gamepad_h/: index.html  toc.html
docs/gps_h/: index.html  toc.html
docs/gravity_h/: index.html  toc.html
docs/gyroscope_h/: index.html  toc.html
docs/hal_h/: index.html  toc.html
docs/humidity_h/: index.html  toc.html
docs/ir_blaster_h/: index.html  toc.html
docs/keystore_h/: index.html  toc.html
docs/light_h/: index.html  toc.html
docs/maps_h/: index.html  toc.html
docs/notification_h/: index.html  toc.html
docs/orientation_h/: index.html  toc.html
docs/path_utils_h/: index.html  toc.html
docs/proximity_h/: index.html  toc.html
docs/shell_h/: index.html  toc.html
docs/sms_h/: index.html  toc.html
docs/spatial_orientation_h/: index.html  toc.html
docs/storagepath_h/: index.html  toc.html
docs/temperature_h/: index.html  toc.html
docs/threads_h/: index.html  toc.html
docs/unique_id_h/: index.html  toc.html
docs/vibrator_h/: index.html  toc.html
docs/wifi_h/: index.html  toc.html
hal/: accelerometer.h  barometer.h  battery.h  bluetooth.h  brightness.h  call.h  camera.h  clipboard.h  compass.h  cpu_count.h  device_name.h  email.h  environment.h  file_chooser.h  filesystem.h  flash.h  gamepad.h  gps.h  gravity.h  gyroscope.h  hal.h  humidity.h  ir_blaster.h  keystore.h  light.h  maps.h  notification.h  orientation.h  path_utils.h  proximity.h  shell.h  sms.h  spatial_orientation.h  storagepath.h  temperature.h  threads.h  unique_id.h  vibrator.h  wifi.h
native/: accelerometer.h  arguments.h  audio_recording.h  barometer.h  battery.h  bluetooth.h  brightness.h  call.h  camera.h  clipboard.h  compass.h  cpu_count.h  device_name.h  email.h  file_chooser.h  file_system.h  flash.h  gps.h  gravity.h  gyroscope.h  humidity.h  ir_blaster.h  keystore.h  light.h  maps.h  notifications.h  orientation.h  proximity.h  screenshot.h  sms.h  spatial_orientation.h  spatial_roientation.h  speach_to_text.h  speech_to_text.h  storage_path.h  temperature.h  text_to_speech.h  threads.h  unique_id.h  vibrator.h  (+2 more)
native/android/: accelerometer.c  audio_recording.c  barometer.c  battery.c  bluetooth.c  call.c  clipboard.c  compass.c  device_name.c  email.c  file_chooser.c  file_system.c  gps.c  gravity.c  humidity.c  keystore.c  maps.c  notifications.c  screenshot.c  sms.c  spatial_orientation.c  speech_to_text.c  storage_path.c  temperature.c  text_to_speech.c  threads.c
native/ios/: accelerometer.m  arguments.c  arguments.m  bluetooth.c  bluetooth.m  call.m  camera.m  clipboard.m  cpu_count.m  device_name.c  device_name.m  file_chooser.m  flash.m  gps.m  gyroscope.c  humidity.c  humidity.m  ir_blaster.m  keystore.m  light.m  maps.c  maps.m  orientation.m  proximity.c  proximity.m  screenshot.c  sms.c  spatial_orientation.m  speech_to_text.c  speech_to_text.m  storage_path.m  (+8 more)
src/: cpu_count_posix.c  device_name_posix.c  dummy_accelerometer.c  dummy_barometer.c  dummy_bluetooth.c  dummy_brightness.c  dummy_call.c  dummy_camera.c  dummy_clipboard.c  dummy_compass.c  dummy_device_name.c  dummy_email.c  dummy_environment.c  dummy_file_chooser.c  dummy_flash.c  dummy_gamepad.c  dummy_gps.c  dummy_gravity.c  dummy_gyroscope.c  dummy_humidity.c  dummy_ir_blaster.c  dummy_keystore.c  dummy_light.c  dummy_maps.c  dummy_notification.c  dummy_orientation.c  dummy_proximity.c  dummy_shell.c  dummy_sms.c  dummy_spatial_orientation.c  dummy_storagepath.c  dummy_temperature.c  dummy_unique_id.c  dummy_vibrator.c  dummy_wifi.c  environment_posix.c  filesystem_posix.c  gamepad_common.c  gamepad_common.h  gamepad_mapping.c  (+4 more)
(+323 files in other folders)
